# ctcrash

./: .gitignore  README.md  pyproject.toml
data/norwalk_2021_2024/: crashes.csv  persons.csv  vehicles.csv
data/norwalk_2023_pedestrians/: crashes.csv  persons.csv  vehicles.csv
notebooks/: CTCDR_2021-2024_Involving_Non-motorists.ipynb
src/ctcrash/: __init__.py  utils.py
